restart without bam files

--- a/vignettes/minichip-vignette.Rmd
+++ b/vignettes/minichip-vignette.Rmd
@@ -165,16 +165,7 @@ To plot heatmaps for each sample (bam file) sorted by the first bam file, you ca
 ```{r heatmap, fig.height=10, fig.width=8}
 nicebamNames <- bamNames
 ht_list <- DrawSummitHeatmaps(counts[c(1,2,3)], bamNames[c(1,2,3)], nicebamNames[c(1,2,3)], orderSample=1, use.log=TRUE,
-                              bottomCpm=c(0,0,0), medianCpm = c(2,2,2), topCpm = c(4,4,4), orderWindows=2)
-draw(ht_list, padding = unit(c(3, 8, 8, 2), "mm"))
-```
-
-#### Draw a heatmap with summarized pixels to end up with 500 rows.
-
-```{r smooth_heatmap, fig.height=10, fig.width=8}
-ht_list <- DrawSummitHeatmaps(counts[c(1,2,3)], bamNames[c(1,2,3)], nicebamNames[c(1,2,3)], orderSample=1, use.log=TRUE,
-                              bottomCpm=c(0,0,0), medianCpm = c(2,2,2), topCpm = c(4,4,4), orderWindows=2, TargetHeight=500
-                              )
+                              bottomCpm=c(0,0,0), medianCpm = c(2,2,2), topCpm = c(4,4,4), orderWindows=2, TargetHeight=500)
 draw(ht_list, padding = unit(c(3, 8, 8, 2), "mm"))
 ```
 
@@ -219,17 +210,6 @@ allCounts <- c(meanCounts,annos)
 cols <- c("darkblue","darkred","darkgreen")
 upper.cpm <- c(rep(2,2),rep(1,1))
 
-heatmap_list <- DrawSummitHeatmaps(allCounts, names(allCounts), plotcol= cols, medianCpm = upper.cpm, orderSample = 1, use.log=TRUE, summarizing = "mean", orderWindows=2,MetaScale=c("all","all","individual"))
+heatmap_list <- DrawSummitHeatmaps(allCounts, names(allCounts), plotcol= cols, medianCpm = upper.cpm, orderSample = 1, use.log=TRUE, summarizing = "mean", orderWindows=2,MetaScale=c("all","all","individual"), TargetHeight=500)
 draw(heatmap_list, padding = unit(c(3, 8, 8, 2), "mm"),show_heatmap_legend=FALSE)
 ```
-
-### Draw the same heatmap with summarized pixels.
-
-```{r, fig.height=10, fig.width=8}
-heatmap_list <- DrawSummitHeatmaps(allCounts, names(allCounts), plotcol= cols, medianCpm = upper.cpm, orderSample = 1, use.log=TRUE, summarizing = "mean", orderWindows=2, TargetHeight = 500)
-draw(heatmap_list, padding = unit(c(3, 8, 8, 2), "mm"),show_heatmap_legend=FALSE)
-```
-
-
-
-
