--- a/vignettes/minichip-vignette.Rmd
+++ b/vignettes/minichip-vignette.Rmd
@@ -52,7 +52,7 @@ peaks1 <- makeGRangesFromDataFrame(peaks1.d,
                                    seqnames.field=c("chr"),
                                    start.field=c("start"),
                                    end.field=c("end"),
-                                   starts.in.df.are.0based=FALSE)
+                                   starts.in.df.are.0based=TRUE)
 
 peaks2 <- makeGRangesFromDataFrame(peaks2.d,
                                    keep.extra.columns=TRUE,
@@ -61,7 +61,7 @@ peaks2 <- makeGRangesFromDataFrame(peaks2.d,
                                    seqnames.field=c("chr"),
                                    start.field=c("start"),
                                    end.field=c("end"),
-                                   starts.in.df.are.0based=FALSE)
+                                   starts.in.df.are.0based=TRUE)
 
 peaks3 <- makeGRangesFromDataFrame(peaks3.d,
                                    keep.extra.columns=TRUE,
@@ -70,7 +70,7 @@ peaks3 <- makeGRangesFromDataFrame(peaks3.d,
                                    seqnames.field=c("chr"),
                                    start.field=c("start"),
                                    end.field=c("end"),
-                                   starts.in.df.are.0based=FALSE)
+                                   starts.in.df.are.0based=TRUE)
 ```
 
 Then we select only the peaks which occur in at least 2 of the 3 replicates using the GRanges subsetByOverlaps and overlapsAny functions.
